test/tests/errors/error-ref-no-cont-non-pointer2.sm
// true
// false
// false
/**/
/**/

program {
    const i: int = 1;
    output cont i;
}